--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -62,9 +62,9 @@ nav {
   justify-content: space-around;
   margin-right: 2%;
 }
-/* a {
-  color: navy;
-} */
+a {
+  color: navy !important;
+}
 nav a {
   text-decoration: none;
 }
