--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,17 @@ nav a {
   text-decoration: none;
 }
 
+/* h1 & h2 for the page will be aligned center as block level elements inside the main-head div*/
+h1, h2 {
+  font-family: Georgia, serif;
+  text-align: center;
+}
+/* margin top needed to keep entire header visible below the fixed header */
+h1 {
+    margin-top: 150px;
+    font-size: 250%;
+}
+
 
 
 
