--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,17 @@ h1 {
     font-size: 250%;
 }
 
+h2 {
+  font-size: 150%; 
+}
+footer {
+  background-color: dodgerblue;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  /* min-width: 1280px; */
+}
+
 
 
 
